# osu-differ

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
scripts/: realm-reader.mjs
src/: api.ts  detail.ts  livesync.ts  main.ts  model.ts  sidebar.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: beatmap.rs  lazer_log.rs  lib.rs  main.rs  realm.rs
