[package]
name = "osu_diff"
version = "0.1.0"
description = "osu!diff — mania beatmap analyzer"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "osu_diff_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dev-dependencies]
# Only for `bench_detection_latency`, which compares the raw poll tail against
# filesystem notifications. Not linked into the app.
notify = "8.0.0"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri-plugin-log = "2.8.0"
log = "0.4.33"
which = "8.0.4"
anyhow = "1.0.103"
rosu-map = "0.2.1"
rosu-pp = "4.0.1"
dirs = "6.0.0"
env_logger = "0.11.11"
